# wcam

./: .gitmodules  CMakeLists.txt  Dev Notes.md  LICENSE  README.md  todo.md
.github/workflows/: build_and_run_tests.yml  build_tests.yml  create_release_executables.yml
include/wcam/: wcam.hpp
include/webcam_info/: webcam_info.hpp
src/: Capture.cpp  CaptureStrongRef.cpp  CaptureStrongRef.hpp  DeviceId.hpp  FirstRowIs.hpp  Image.cpp  Image.hpp  Info.hpp  KeepLibraryAlive.cpp  KeepLibraryAlive.hpp  MaybeImage.cpp  MaybeImage.hpp  Resolution.cpp  Resolution.hpp  ResolutionsMap.hpp  SharedWebcam.cpp  SharedWebcam.hpp  internal.hpp  overloaded.hpp  wcam.cpp  wcam_macos.cpp  wcam_macos.hpp  wcam_macos.mm  wcam_windows.cpp  wcam_windows.hpp  webcam_info.cpp  webcam_info.mm
src/internal/: Capture.cpp  Capture.hpp  CapturesManager.cpp  CapturesManager.hpp  ICapture.hpp  ICaptureImpl.cpp  ICaptureImpl.hpp  ImageFactory.hpp  InfosManager.cpp  InfosManager.hpp  Manager.cpp  Manager.hpp  ResolutionsManager.cpp  ResolutionsManager.hpp  WebcamRequest.cpp  WebcamRequest.hpp  fallback_webcam_name.cpp  fallback_webcam_name.hpp  make_device_id.hpp  qedit.h  utils.cpp  utils.hpp  wcam_linux.cpp  wcam_linux.hpp  wcam_macos.cpp  wcam_macos.hpp  wcam_macos.mm  wcam_windows.cpp  wcam_windows.hpp
tests/: CMakeLists.txt  tests.cpp
